--- a/app/src/main/res/layout/fragment_detalhes_descricao.xml
+++ b/app/src/main/res/layout/fragment_detalhes_descricao.xml
@@ -43,16 +43,11 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView56"
+                    android:id="@+id/txtvDescricao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/textsaturado" />
 
-                <TextView
-                    android:id="@+id/textView57"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/textsaturado" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
