--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,6 +20,15 @@
             android:paddingTop="5dp"
             android:paddingRight="10dp"
             android:paddingBottom="5dp">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:layout_marginBottom="100dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/letreiro_logo" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,7 +50,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName3"
+                    android:id="@+id/txtbEmaillogin"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="20dp"
@@ -59,7 +69,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName2"
+                    android:id="@+id/txtbSenhalogin"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="20dp"
@@ -71,7 +81,7 @@
                     android:paddingRight="20dp" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/btnAcessarconta"
                     android:layout_width="250dp"
                     android:layout_height="56dp"
                     android:backgroundTint="@color/cinzatema"
@@ -81,11 +91,12 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView92"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
+                    android:id="@+id/txtvEscreceusenha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
                     android:gravity="center"
-                    android:text="Esqueçeu a senha?"
+                    android:text="Esqueçeu a senha"
                     android:textAllCaps="false" />
 
             </LinearLayout>
@@ -98,7 +109,7 @@
                 android:text="Ainda não tem uma conta?" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btnCadastrese"
                 android:layout_width="250dp"
                 android:layout_height="56dp"
                 android:backgroundTint="@color/cinzatema"
