--- a/app/src/main/res/layout/fragment_pedido_rastreio.xml
+++ b/app/src/main/res/layout/fragment_pedido_rastreio.xml
@@ -110,7 +110,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView56"
+                    android:id="@+id/txtvDescricao"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:gravity="left|center_vertical"
